# iracepy-tiny

./: .gitignore  README.md  flake.nix  install.py  pyproject.toml  requirements.txt
examples/: dual_annealing.py  multi_irace.py  parameter_space.py
irace/: __init__.py  _rpackage.py  _rpy2.py  base.py  conversion.py  experiment.py  params.py  runner.py  scenario.py
