[tool.poetry]
name = "irace"
version = "0.2.0"
description = "Pythonic bindings for irace: Iterated Racing for Automatic Algorithm Configuration."
authors = [
    "Manuel López-Ibáñez <manuel.lopez-ibanez@manchester.ac.uk>",
    "Deyao Chen <chendeyao000@gmail.com>",
    "Jonathan Wurth <jonathan.wurth@uni-a.de>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0"
rpy2 = "^3.5"
scipy = "^1.14"
pandas = "^2.2"
joblib = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
