[project]
name = "irace"
version = "0.2.0"
description = "Pythonic bindings for irace: Iterated Racing for Automatic Algorithm Configuration."
authors = [
    { name = "Manuel López-Ibáñez", email = "manuel.lopez-ibanez@manchester.ac.uk" },
    { name = "Deyao Chen", email = "chendeyao000@gmail.com" },
    { name = "Jonathan Wurth", email = "jonathan.wurth@uni-a.de" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy>=2.0",
    "rpy2>=3.5",
    "pandas>=2.2",
    "scipy>=1.14",
    "joblib>=1.4",
]

[project.urls]
Homepage = "https://github.com/Saethox/iracepy-tiny"
Issues = "https://github.com/Saethox/iracepy-tiny/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
ignore = ["E701"]